fixed book appointment options css so its not so squished
fixed book appointment options css so its not so squished

--- a/endpoints-skeleton-archetype/src/main/webapp/css/bookAppointment.css
+++ b/endpoints-skeleton-archetype/src/main/webapp/css/bookAppointment.css
@@ -52,7 +52,7 @@ body h2{
 	padding-bottom: 5%; 
 }
 .appHolderOpt{
-	width:50%;
+	width:70%;
 	margin-left: auto;
 	margin-right:auto;	
 	
